--- a/css/main.css
+++ b/css/main.css
@@ -81,20 +81,46 @@
 .marg-12 {
   margin: 0 50%; }
 
-nav {
-  background-color: red;
-  height: 100%;
-  padding: 2% 0; }
-  nav ul li {
-    color: blue;
-    text-transform: uppercase;
-    list-style: none;
-    font-weight: 900;
-    text-align: center;
-    font-family: Lato, sans-serif;
-    margin: 15px 0; }
+header.header-parent {
+  position: fixed; }
+  header.header-parent nav {
+    background-color: red;
+    height: 100vh;
+    padding: 2% 0; }
+    header.header-parent nav ul li {
+      color: blue;
+      text-transform: uppercase;
+      list-style: none;
+      font-weight: 900;
+      text-align: center;
+      font-family: Lato, sans-serif;
+      margin: 15px 0;
+      font-size: 14px; }
 
-.about {
-  height: 100%; }
+div.header-child {
+  visibility: hidden;
+  opacity: 0; }
+
+div.tuto {
+  background-color: green;
+  padding: 3%; }
+  div.tuto ul {
+    margin-left: 25px; }
+    div.tuto ul li ol li {
+      list-style: none;
+      margin-left: 25px; }
+
+div.input-console {
+  padding: 3%;
+  display: inline-block;
+  background-color: yellow; }
+  div.input-console input {
+    padding: 3px; }
+  div.input-console input.btn {
+    margin-left: 15px; }
+
+div.render-console {
+  padding: 3%;
+  background-color: blue; }
 
 /*# sourceMappingURL=main.css.map */
