--- a/css/sass/base/_about.scss
+++ b/css/sass/base/_about.scss
@@ -1,3 +1,34 @@
-.about{
-    height: 100%;
+div.tuto{
+    background-color:green;
+    padding:3%;
+    ul{
+        margin-left:25px;
+        li{
+            ol{
+                li{
+                    list-style: none;
+                    margin-left:25px;
+                }
+            }
+        }
+    }
+}
+
+div.input-console{
+    padding:3%;
+    display: inline-block;
+    background-color:yellow;
+    input{
+        padding:3px;
+    }
+    input.inpt{
+    }
+    input.btn{
+        margin-left:15px;
+    }
+}
+
+div.render-console{
+    padding:3%;
+    background-color:blue;
 }
