--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -1,4 +1,13 @@
+@import "base/variable";
 @import "grid/grid";
 @import "menu/menu";
 @import "base/about";
 //@import "helpers/";
+
+body{
+    background-color:$grey;
+}
+
+*{
+    font-family: 'Lato', sans-serif;
+}
