--- a/css/sass/base/_about.scss
+++ b/css/sass/base/_about.scss
@@ -71,3 +71,31 @@ div.render-console{
 .blue{
     color:#13a8b9;
 }
+
+.greenConsole{
+    color:$greenConsole;
+}
+
+.yellowLog{
+    color:$yellowLog;
+}
+
+.blueJS{
+    color:$blueJS;
+}
+
+.blueJS2{
+    color:$blueJS2;
+}
+
+.orangeJS{
+    color:$orangeJS;
+}
+
+.greenJS{
+    color:$greenJS;
+}
+
+.roseRend{
+    color:$roseRend;
+}
