--- a/css/sass/base/_variable.scss
+++ b/css/sass/base/_variable.scss
@@ -1,4 +1,11 @@
 $black:#191919;
 $white:#FFFFFF;
 $lblack:#28282b;
-$grey:#8D8D8D
+$grey:#8D8D8D;
+$greenConsole:#3ac9b0;
+$yellowLog:#dcdcaa;
+$blueJS:#569cd6;
+$blueJS2:#9cdcfe;
+$orangeJS:#c89178;
+$greenJS:#3ac9b0;
+$roseRend:#c57992;
