--- a/css/main.css
+++ b/css/main.css
@@ -94,15 +94,15 @@ header.header-parent {
         color: #8D8D8D;
         text-transform: uppercase;
         list-style: none;
-        font-weight: 300;
+        font-weight: 600;
         text-align: center;
         font-size: 14px;
         margin: 2px 15px;
         padding: 5px 0;
-        border-bottom: 1px solid #28282b;
+        border: 1px solid #28282b;
         transition: 0.3s; }
         header.header-parent nav ul li:hover {
-          border-bottom: 1px solid #FFFFFF;
+          border: 1px solid #FFFFFF;
           background-color: rgba(255, 255, 255, 0.5);
           transition: 0.3s;
           color: #FFFFFF; }
@@ -138,6 +138,10 @@ div.input-console {
     color: #FFFFFF;
     padding: 5px;
     font-weight: 900; }
+    div.input-console input.btn:hover {
+      color: #191919;
+      background-color: #FFFFFF;
+      transition: 0.3s; }
   div.input-console input#inputText {
     text-align: center;
     width: 17%;
@@ -152,8 +156,25 @@ div.render-console {
   color: #FFFFFF;
   padding: 3%;
   background-color: #28282b; }
+  div.render-console div.render-terminal button.btn {
+    margin: 2px;
+    background: none;
+    border: 2px solid #FFFFFF;
+    color: #FFFFFF;
+    padding: 5px;
+    font-weight: 900;
+    transition: 0.3s;
+    font-size: 11px; }
+    div.render-console div.render-terminal button.btn:hover {
+      color: #191919;
+      background-color: #FFFFFF;
+      transition: 0.3s; }
   div.render-console div.render-terminal span.tiret {
     color: #28282b; }
+
+.btn:hover {
+  color: #191919;
+  background-color: #FFFFFF; }
 
 .green {
   color: #0dbc79; }
@@ -187,6 +208,9 @@ div.render-console {
 
 .roseRend {
   color: #c57992; }
+
+.roseTwig {
+  color: #f92672; }
 
 body {
   background-color: #8D8D8D; }
