--- a/css/sass/base/_about.scss
+++ b/css/sass/base/_about.scss
@@ -34,6 +34,11 @@ div.input-console{
         color:$white;
         padding:5px;
         font-weight: 900;
+        &:hover{
+            color:$black;
+            background-color:$white;
+            transition:0.3s;
+        }
     }
     input#inputText{
         text-align: center;
@@ -52,10 +57,30 @@ div.render-console{
     padding:3%;
     background-color:$lblack;
     div.render-terminal{
+        button.btn{
+            margin:2px;
+            background:none;
+            border:2px solid $white;
+            color:$white;
+            padding:5px;
+            font-weight: 900;
+            transition:0.3s;
+            font-size:11px;
+            &:hover{
+                color:$black;
+                background-color:$white;
+                transition:0.3s;
+            }
+        }
         span.tiret{
             color:$lblack;
         }
     }
+}
+
+.btn:hover{
+    color:$black;
+    background-color:$white;
 }
 
 .green{
@@ -98,4 +123,8 @@ div.render-console{
 
 .roseRend{
     color:$roseRend;
+}
+
+.roseTwig{
+    color:$roseTwig;
 }
