--- a/css/sass/menu/_menu.scss
+++ b/css/sass/menu/_menu.scss
@@ -11,18 +11,18 @@ header.header-parent{
                 color:#8D8D8D;
                 text-transform: uppercase;
                 list-style: none;
-                font-weight: 300;
+                font-weight: 600;
                 text-align: center;
                 font-size: 14px;
                 margin: 2px 15px;
                 padding: 5px 0;
-                border-bottom: 1px solid #28282b;
+                border: 1px solid #28282b;
                 transition:0.3s;
                 &:hover{
-                    border-bottom: 1px solid $white;
+                    border: 1px solid $white;
                     background-color:rgba(255,255,255,0.5);
                     transition:0.3s;
-                    color:$white
+                    color:$white;
                 }
             }
         }
