--- a/css/main.css
+++ b/css/main.css
@@ -104,8 +104,8 @@ header.header-parent {
         font-weight: 600;
         text-align: center;
         font-size: 14px;
-        margin: 2px 15px;
         padding: 5px 0;
+        margin: 2px 8px;
         border: 1px solid #28282b;
         transition: 0.3s;
         border-radius: 3px; }
@@ -162,7 +162,7 @@ div.input-console {
 
 div.render-console {
   color: #FFFFFF;
-  padding: 3%;
+  padding: 2%;
   background-color: #28282b; }
   div.render-console div.render-terminal button.btn {
     margin: 2px;
@@ -180,9 +180,36 @@ div.render-console {
   div.render-console div.render-terminal span.tiret {
     color: #28282b; }
 
+div.project1 {
+  position: absolute;
+  top: 1%;
+  left: 1%;
+  display: none; }
+
 .btn:hover {
   color: #191919;
   background-color: #FFFFFF; }
+
+button.close {
+  margin: 2px;
+  background: none;
+  border: 2px solid #FFFFFF;
+  color: #FFFFFF;
+  padding: 5px;
+  font-weight: 900;
+  transition: 0.3s;
+  font-size: 11px; }
+  button.close:hover {
+    color: #191919;
+    background-color: #FFFFFF;
+    transition: 0.3s; }
+
+div.project1 {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding-bottom: 3%; }
+  div.project1 img.project-img {
+    width: 600px;
+    margin: 5px 34%; }
 
 .green {
   color: #0dbc79; }
