--- a/css/sass/base/_about.scss
+++ b/css/sass/base/_about.scss
@@ -52,7 +52,7 @@ div.input-console{
 
 div.render-console{
     color:$white;
-    padding:3%;
+    padding:2%;
     background-color:$lblack;
     div.render-terminal{
         button.btn{
@@ -76,9 +76,41 @@ div.render-console{
     }
 }
 
+div.project1{
+    position: absolute;
+    top: 1%;
+    left: 1%;
+    display: none;
+}
+
 .btn:hover{
     color:$black;
     background-color:$white;
+}
+
+button.close{
+    margin:2px;
+    background:none;
+    border:2px solid $white;
+    color:$white;
+    padding:5px;
+    font-weight: 900;
+    transition:0.3s;
+    font-size:11px;
+    &:hover{
+        color:$black;
+        background-color:$white;
+        transition:0.3s;
+    }
+}
+
+div.project1{
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-bottom: 3%;
+    img.project-img{
+        width: 600px;
+        margin: 5px 34%;
+    }
 }
 
 .green{
