--- a/css/main.css
+++ b/css/main.css
@@ -258,14 +258,18 @@ div.project1 {
     min-width: 46pximportant; }
 
   #menu-desktop {
-    display: none; }
+    display: none !important; }
 
   #menu-mobile {
-    display: block; }
+    display: block !important; }
 
   input#inputText {
     font-size: 10px !important;
-    width: 27% !important; } }
+    width: 27% !important; }
+
+  div.project1 img.project-img {
+    width: 300px !important;
+    margin: 5px 11% !important; } }
 /* Sur tous types d'├®cran, quand la largeur de la fen├¬tre est comprise entre 1024px et 1280px
 
 @media all and (min-width: 1024px) and (max-width: 1280px){
