--- a/css/main.css
+++ b/css/main.css
@@ -247,6 +247,10 @@ div.project1 {
 .roseTwig {
   color: #f92672; }
 
+@media screen and (max-width: 600px) {
+  img.project-img {
+    width: 75% !important;
+    margin: 5px 12% !important; } }
 @media screen and (min-width: 1280px) {
   #menu-desktop {
     display: block; }
@@ -265,11 +269,7 @@ div.project1 {
 
   input#inputText {
     font-size: 10px !important;
-    width: 27% !important; }
-
-  div.project1 img.project-img {
-    width: 300px !important;
-    margin: 5px 11% !important; } }
+    width: 27% !important; } }
 /* Sur tous types d'├®cran, quand la largeur de la fen├¬tre est comprise entre 1024px et 1280px
 
 @media all and (min-width: 1024px) and (max-width: 1280px){
