--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,9 @@ div.project1 {
   div.project1 img.project-img {
     width: 600px; }
 
+.mailto {
+  color: coral; }
+
 .green {
   color: #0dbc79; }
 
